# pa10_7c_description

./: CMakeLists.txt  arm_controllers.launch  arm_controllers_prefix.launch  la_gazebo_controller.yaml  pa10-a.urdf.xacro  pa10-c.urdf.xacro  pa10_shadow_controller_manager.xacro  package.xml  ra_controllers.yaml  ra_gazebo_controller.yaml
config/: controllers.yaml  gazebo_controller.yaml  la_controllers.yaml
launch/: arm_controllers.launch  arm_controllers_prefix.launch  arm_trajectory_controllers.launch  pa10_gazebo.launch
meshes/: README.md  link4_mesh.dae  link5_mesh.dae
meshes/pa-7a/: link0_mesh.dae  link1_mesh.dae  link2_mesh.dae  link3_mesh.dae  link4_mesh.dae  link5_mesh.dae  link6_mesh.dae  link7_mesh.dae
meshes/pa-7c/: link0_mesh.dae  link1_mesh.dae  link2_mesh.dae  link3_mesh.dae  link6_mesh.dae  link7_mesh.dae
robots/: pa10_7c_arm.urdf.xacro
urdf/: pa10-7c.urdf.xacro  pa10-a.urdf.xacro  pa10-c.urdf.xacro  pa10_ros_controller_manager.xacro
